--- a/index.html
+++ b/index.html
@@ -2,36 +2,41 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Untuk Kamu 🌷</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<div class="petals"></div>
+<div class="petals-container"></div>
 
 <div class="container">
-  <h1 class="fade-in">Hai kamu 🌸</h1>
-  <p id="typing"></p>
-  <button onclick="showConfession()">Lanjut...</button>
+  <div class="content">
+    <h1 class="fade-in">Hai kamu 🌸</h1>
+    <p id="typing" class="typing-text"></p>
+    <button class="btn-main" onclick="showConfession()">Lanjut...</button>
 
-  <div id="confession" class="hidden">
-    <h2>Jadi...</h2>
-    <p>
-      Aku nggak tau kapan tepatnya aku mulai nyaman sama kamu.
-      Tapi setiap ngobrol sama kamu, rasanya selalu pengen lebih lama.
-    </p>
+    <div id="confession" class="hidden confession-box">
+      <h2>Jadi...</h2>
+      <p class="confession-text">
+        Aku nggak tau kapan tepatnya aku mulai nyaman sama kamu.
+        Tapi setiap ngobrol sama kamu, rasanya selalu pengen lebih lama.
+        <br><br>
+        Kamu spesial buat aku.
+      </p>
 
-    <h3>Maukah kamu jadi pacarku?</h3>
+      <h3>Maukah kamu jadi pacarku?</h3>
 
-    <div class="btn-group">
-      <button class="yes" onclick="accepted()">Iya 💖</button>
-      <button class="maybe" onmouseover="moveButton(this)">
-        Aku pikir dulu 🙈
-      </button>
+      <div class="btn-group">
+        <button class="yes" onclick="accepted()">Iya 💖</button>
+        <button class="maybe" onmouseover="moveButton(event)" onmouseout="resetButton(event)">
+          Aku pikir dulu 🙈
+        </button>
+      </div>
     </div>
-  </div>
 
-  <div id="result"></div>
+    <div id="result" class="result-box"></div>
+  </div>
 </div>
 
 <script src="script.js"></script>
