Create romantic website homepage

--- a/index.html
+++ b/index.html
@@ -1,44 +1,35 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Untuk Kamu 🌷</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Romantic Homepage</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-<div class="petals-container"></div>
-
-<div class="container">
-  <div class="content">
-    <h1 class="fade-in">Hai kamu 🌸</h1>
-    <p id="typing" class="typing-text"></p>
-    <button class="btn-main" onclick="showConfession()">Lanjut...</button>
-
-    <div id="confession" class="hidden confession-box">
-      <h2>Jadi...</h2>
-      <p class="confession-text">
-        Aku nggak tau kapan tepatnya aku mulai nyaman sama kamu.
-        Tapi setiap ngobrol sama kamu, rasanya selalu pengen lebih lama.
-        <br><br>
-        Kamu spesial buat aku.
-      </p>
-
-      <h3>Maukah kamu jadi pacarku?</h3>
-
-      <div class="btn-group">
-        <button class="yes" onclick="accepted()">Iya 💖</button>
-        <button class="maybe" onmouseover="moveButton(event)" onmouseout="resetButton(event)">
-          Aku pikir dulu 🙈
-        </button>
-      </div>
-    </div>
-
-    <div id="result" class="result-box"></div>
-  </div>
-</div>
-
-<script src="script.js"></script>
+    <header>
+        <h1>Welcome to Our Romantic Escape</h1>
+    </header>
+    <main>
+        <section>
+            <h2>Our Story</h2>
+            <p>Once upon a time, in a land filled with love and dreams...</p>
+        </section>
+        <section>
+            <h2>Why Choose Us?</h2>
+            <ul>
+                <li>Breathtaking Sceneries</li>
+                <li>Intimate Settings</li>
+                <li>Unforgettable Experiences</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Contact Us</h2>
+            <p>For reservations and inquiries, reach out to us at info@romanticescape.com</p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2026 Our Romantic Escape</p>
+    </footer>
 </body>
 </html>
